# rl-agent

./: .gitignore
rl_agent/: CMakeLists.txt  compile_proto.sh  package.xml
rl_agent/proto/: gps.proto
rl_agent_base/: CMakeLists.txt  README.md  package.xml
rl_agent_base/config/: parameters.yaml  rl_config.cfg
rl_agent_base/example/src/: main.cpp  plugin_example.cpp  plugin_example.h
rl_agent_base/include/: robot_plugin.h  robot_plugin2.h
rl_agent_base/include/controller/: controller.h  lqr.h  position_controller.h  proportional.h  trial_controller.h
rl_agent_base/include/sample/: sample.h
rl_agent_base/include/sensor/: chain_joint_encoder.h  encoderfilter.h  sensor.h
rl_agent_base/include/util/: composite.h  options_map.h
rl_agent_base/src/: robot_plugin.cpp  robot_plugin2.cpp
rl_agent_base/src/controller/: lqr.cpp  position_controller.cpp  proportional.cpp  trial_controller.cpp
rl_agent_base/src/sample/: sample.cpp
rl_agent_base/src/sensor/: chain_joint_encoder.cpp  encoderfilter.cpp  sensor.cpp
rl_impl/experiments/qr_lqr/: hyperparams.py  target_state
rl_impl/python/gps/: gps_main.py
rl_impl/python/gps/agent/: config.py
rl_impl/python/gps/agent/ros/: agent_ros.py  ros_utils.py
rl_impl/python/gps/algorithm/cost/: cost_state.py
rl_impl/python/gps/gui/: textbox.py
rl_msgs/: CMakeLists.txt  package.xml
rl_msgs/msg/: ControllerParams.msg  PropartParams.msg
